CID-478: Fix failures